--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,7 +1,9 @@
 /* NAV-BAR STYLES */
 .header-wrapper {
     color: #fcfcfc;
-    margin: -10px;
+    margin-top: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
     padding: 0px;
     font-family: 'Roboto', sans-serif;
 }
