--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,16 +1,4 @@
-/*
-Off-white background color #fcfcfc
-Red #DA3732
-Dark Orange #DE4735
-Light Orange #E68334
-Dark Blue #293278
-Light Blue #459EDE
-Green #90C844
-Purple #7A2887
-*/
-
-/* roboto text --font-family: 'Roboto', sans-serif;*/
-/*lobster titles -- font-family: 'Lobster', cursive;*/
+*lobster titles -- font-family: 'Lobster', cursive;*/
 
 
 /*form styles*/
