--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,4 +1,4 @@
-*lobster titles -- font-family: 'Lobster', cursive;*/
+/* lobster titles -- font-family: 'Lobster', cursive; */
 
 
 /*form styles*/
