--- a/styles/index.css
+++ b/styles/index.css
@@ -69,7 +69,7 @@
     width: auto;
 }
 
-.about {
+.about-wrapper {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -77,8 +77,15 @@
     margin-left: -10px;
     margin-bottom: -4px;
     background-color: #459EDE;
-    padding: 100px 150px;
+    padding: 100px 0px;
     box-shadow: 0px 0px 35px 4px rgba(0,0,0,0.59);
+}
+
+.about {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 85vw;
 }
 
 .aboutImg {
