--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,10 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lobster%7CRoboto" rel="stylesheet">
-    <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="styles/common.css">
-    <link rel="stylesheet" href="styles/nav.css">
-    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="/static/styles/common.css">
+    <link rel="stylesheet" href="/static/styles/nav.css">
+    <link rel="stylesheet" href="/static/styles/footer.css">
+    <link rel="stylesheet" href="/static/styles/index.css">
 
 </head>
 <body>
@@ -32,7 +32,7 @@
             <div class="logo-header">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/Soda City 48x96 Sign PROOF I -  2014 (1).png" alt="MainLogo"></a>
+                        <img src="/static/images/Soda City 48x96 Sign PROOF I -  2014 (1).png" alt="MainLogo"></a>
                     </a>
                 </div>
             </div>
@@ -74,14 +74,14 @@
             <a href="Menu.html" class="link">
                 <div class="box">
                     <h2>Menu</h2>
-                    <img src="/images/soda.jpeg" alt="soda" class="sodaImg">
+                    <img src="/static/images/soda.jpeg" alt="soda" class="sodaImg">
                 </div>
             </a>
 
             <a href="https://www.instagram.com/mysodacity/" class="link">
                 <div class="box">
                     <h2>Tag us on Instagram</h2>
-                    <img src="/images/allWhite.jpeg" alt="Instagram Pic" class="instaPic">
+                    <img src="/static/images/allWhite.jpeg" alt="Instagram Pic" class="instaPic">
                 </div>
             </a>
 
@@ -99,7 +99,7 @@
     <div class="about-wrapper">
         <div class="about" id="about">
             <div class="aboutImg">
-                <img src="/images/aboutUs.jpg" alt="Pic of owners" class="aboutUsImg">
+                <img src="/static/images/aboutUs.jpg" alt="Pic of owners" class="aboutUsImg">
             </div>
 
             <div class="aboutText">
