--- a/templates/menu.html
+++ b/templates/menu.html
@@ -9,10 +9,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="styles/nav.css">
-    <link rel="stylesheet" href="styles/footer.css">
-    <link rel="stylesheet" href="styles/menu.css">
+    <link rel="stylesheet" href="/static/styles/index.css">
+    <link rel="stylesheet" href="/static/styles/nav.css">
+    <link rel="stylesheet" href="/static/styles/footer.css">
+    <link rel="stylesheet" href="/static/styles/menu.css">
     
 </head>
 <body>
@@ -34,7 +34,7 @@
             <div class="logo-header">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/Soda City 48x96 Sign PROOF I -  2014 (1).png" alt="MainLogo"></a>
+                        <img src="/static/images/Soda City 48x96 Sign PROOF I -  2014 (1).png" alt="MainLogo"></a>
                     </a>
                 </div>
             </div>
@@ -78,22 +78,22 @@
         <div class="menu_cups">
 
             <div class="cup_body">
-                <img src = "images/cup.png" height = "250" width = "100" alt="cup1">
+                <img src = "/static/images/cup.png" height = "250" width = "100" alt="cup1">
                 <h1> 44oz </h1>
             </div>
 
             <div class="cup_body">
-                <img src = "images/cup.png" height = "225" width = "100" alt="cup2">
+                <img src = "/static/images/cup.png" height = "225" width = "100" alt="cup2">
                 <h1> 32oz </h1>
             </div>
 
             <div class="cup_body">
-                <img src = "images/cup.png" height = "200" width = "100" alt="cup3">
+                <img src = "/static/images/cup.png" height = "200" width = "100" alt="cup3">
                 <h1> 24oz </h1>
             </div>
 
             <div class = "cup_body">
-                <img src = "images/cup.png" height = "175" width = "100" alt="cup4">
+                <img src = "/static/images/cup.png" height = "175" width = "100" alt="cup4">
                 <h1> 16oz </h1>
             </div>
         </div>
@@ -119,104 +119,104 @@
 
         
        
-        <div class="favorite_content">
-            <div class = "favorite_items">
-                <h1>Favorites</h1>
+    <div class="favorite_content">
+        <div class = "favorite_items">
+            <h1>Favorites</h1>
+        </div>
+        
+        <div class="favorite_list_1">
+    
+            <div class="list_items">
+                <img src = "/static/images/drpepper.png" alt="">
+                <p>Dirty Dr.Pepper <br> Dr.pepper + Coconut</p><br>
             </div>
+
+            <div class="list_items">
+                <img src="/static/images/drpepper.png" alt="">
+                <p> Mighty Monarch <br> Dr.Pepper + Vanilla</p><br>
+            </div>
+
+            <div class="list_items">
+                <img src="/static/images/sprite.png" alt="">
+                <p>Big Easy <br> Sprite + Strawberry + Lime</p><br>
+            </div>
+            
+            <div class="list_items">
+                <img src="/static/images/sprite.png" alt="">
+                <p>Lime Rickey <br> Sprite + Fresh Lime + Grape</p><br>
+            </div>
+            
+            <div class="list_items">
+                <img src="/static/images/sprite.png" alt="">
+                <p>Shirley Temple <br> Sprite + Cherry + Maraschino Cherry</p><br>
+            </div>
+
+            <div class="list_items">
+                <img src="/static/images/sprite.png" alt="">
+                <p>Code Blue <br> Sprite + Blue Coconut</p><br>
+            </div>
+
+            <div class="list_items">
+                <img src="/static/images/mtndew.png" alt="">
+                <p>Kickin Rickey <br> Mtn.Dew + Grape + Fresh Lime</p><br>
+            </div>
+
+            <div class="list_items">
+                <img src="/static/images/mtndew.png" alt="">
+                <p>Sky Scrapper <br> Mtn.Dew + Blue Coconut + Strawberry</p><br>
+            </div>
+
+            <div class="list_items">
+                <img src="/static/images/dietcoke.png" alt="">
+                <p>Motor City <br> Diet Coke + Marachino Cherry</p><br>
+            </div>
+
+            <div class="list_items">
+                <img src="/static/images/coke.png" alt="">
+                <p>Ghetto Buster <br> Coke + White Chocolate</p><br>
+            </div>
+
+            <div class="list_items">
+                <img src="/static/images/coke.png" alt="">
+                <p>Sin City <br> Coke + Vanilla + Maracshino cherry</p><br>
+            </div>
+
+            <div class="list_items">
+                <img src="/static/images/rootbeer.png" alt="">
+                <p>Brown Cow <br> Rootbeer + Vanilla Creamer</p><br>
+            </div>
+            <div class="list_items">
+                <img src="/static/images/mtndew.png" alt="">
+                <p>Downtown <br> Mtn.Dew + Mango</p><br>
+            </div>
+
+            <div class="list_items">
+                <img src="/static/images/mtndew.png" alt="">
+                <p>Bulldog Blast <br> Mtn.Dew + Blue Rasberry</p><br>
+            </div>
+
+            <div class="list_items">
+                <img src="/static/images/mtndew.png" alt="">
+                <p>Maui Waui <br> Mtn.Dew + Coconut + Peach/Pineapple</p><br>
+            </div>
+
+            <div class="list_items">
+                        <img src="/static/images/lemonade.png" alt="">
+                        <p>Cruisin  <br> Lemonade + Ras or Strawberry</p><br>
+                    </div>
         
-            <div class="favorite_list_1">
-                
-                        <div class="list_items">
-                        <img src = "images/drpepper.png" alt="">
-                        <p>Dirty Dr.Pepper <br> Dr.pepper + Coconut</p><br>
-                        </div>
-
-                        <div class="list_items">
-                            <img src="images/drpepper.png" alt="">
-                        <p> Mighty Monarch <br> Dr.Pepper + Vanilla</p><br>
-                        </div>
-
-                        <div class="list_items">
-                        <img src="images/sprite.png" alt="">
-                        <p>Big Easy <br> Sprite + Strawberry + Lime</p><br>
-                        </div>
-                        
-                        <div class="list_items">
-                        <img src="images/sprite.png" alt="">
-                        <p>Lime Rickey <br> Sprite + Fresh Lime + Grape</p><br>
-                        </div>
-                        
-                        <div class="list_items">
-                        <img src="images/sprite.png" alt="">
-                        <p>Shirley Temple <br> Sprite + Cherry + Maraschino Cherry</p><br>
-                        </div>
-
-                        <div class="list_items">
-                        <img src="images/sprite.png" alt="">
-                        <p>Code Blue <br> Sprite + Blue Coconut</p><br>
-                        </div>
-
-                        <div class="list_items">
-                        <img src="images/mtndew.png" alt="">
-                        <p>Kickin Rickey <br> Mtn.Dew + Grape + Fresh Lime</p><br>
-                        </div>
-
-                        <div class="list_items">
-                                <img src="images/mtndew.png" alt="">
-                                <p>Sky Scrapper <br> Mtn.Dew + Blue Coconut + Strawberry</p><br>
-                                </div>
-        
-                                <div class="list_items">
-                                <img src="images/dietcoke.png" alt="">
-                                <p>Motor City <br> Diet Coke + Marachino Cherry</p><br>
-                                </div>
-        
-                                <div class="list_items">
-                                <img src="images/coke.png" alt="">
-                                <p>Ghetto Buster <br> Coke + White Chocolate</p><br>
-                                </div>
-        
-                                <div class="list_items">
-                                <img src="images/coke.png" alt="">
-                                <p>Sin City <br> Coke + Vanilla + Maracshino cherry</p><br>
-                                </div>
-        
-                                <div class="list_items">
-                                <img src="images/rootbeer.png" alt="">
-                                <p>Brown Cow <br> Rootbeer + Vanilla Creamer</p><br>
-                                </div>
-                                <div class="list_items">
-                                        <img src="images/mtndew.png" alt="">
-                                        <p>Downtown <br> Mtn.Dew + Mango</p><br>
-                                        </div>
-                
-                                        <div class="list_items">
-                                        <img src="images/mtndew.png" alt="">
-                                        <p>Bulldog Blast <br> Mtn.Dew + Blue Rasberry</p><br>
-                                        </div>
-                
-                                        <div class="list_items">
-                                        <img src="images/mtndew.png" alt="">
-                                        <p>Maui Waui <br> Mtn.Dew + Coconut + Peach/Pineapple</p><br>
-                                        </div>
-
-                                        <div class="list_items">
-                                                <img src="images/lemonade.png" alt="">
-                                                <p>Cruisin  <br> Lemonade + Ras or Strawberry</p><br>
-                                                </div>
-                
                                 
                     
-                                            </div>
-            </div>
         </div>
+    </div>
+
                 
         <div class="smoothies_content">
             <div class="smoothies_items">
                 <h1>Smoothies</h1>
             </div>
             <div class="smoothies_list">
-               <img src = "images/smoothies.jpg">
+               <img src = "/static/images/smoothies.jpg">
                     <ul>
                         <h1>16 OZ only</h1>
                         <h1>$5.00</h1>
@@ -235,17 +235,17 @@
                 <h1>Sweets & Treats</h1>
             </div>
             <div class="sweandtre_list">
-                <img src = "images/treats.jpg">
+                <img src = "/static/images/treats.jpg">
                     <ul>
                         <h1>Treats:</h1>
-                            <li>Pretzels--------------------$1.50</li>
-                            <li>    W/cheese-----------$1.75</li>
-                            <li>Nachos--------------$1.75</li>
-                            <li>    W/Jalapenos----------$2.00</li>
+                            <li>Pretzels-----$1.50</li>
+                            <li>    W/cheese-----$1.75</li>
+                            <li>Nachos-----$1.75</li>
+                            <li>    W/Jalapenos-----$2.00</li>
                             <h1>Sweets:</h1>
-                            <li>Sugar Cookie-------$1.25 or 2 for $2.00</li>
-                            <li>Churro (Cinnamon & sugar)-------------$1.25</li>
-                            <li>Churro (Cream Filled)----------$1.50</li>
+                            <li>Sugar Cookie-----$1.25 or 2 for $2.00</li>
+                            <li>Churro (Cinnamon & sugar-----$1.25</li>
+                            <li>Churro (Cream Filled-----$1.50</li>
                     </ul>
             </div>
         </div>
@@ -256,9 +256,10 @@
             </div>
 
             <div class = "hot_drinks_list">
-                <img src = "images/coffee.jpeg">
+                <img src = "/static/images/coffee.jpeg">
                 <ul>
                     <li>Hot Coffee</li>
+                    
                     <li>Hot Chocolate</li>
                 </ul>
             </div>
