--- a/static/styles/menu.css
+++ b/static/styles/menu.css
@@ -126,4 +126,39 @@ body {
     color:  #293278;
 }
 
+.hot_drinks_list img {
+    height: 500px;
+    width: 600px;
+    margin-left: -10px;
+}
+
+.sweandtre_list img {
+    height: 600px;
+    width: 650px;
+    margin-left: -13px;
+    padding-right: 10px;
+}
+
+.smoothies_list img {
+    height: 600px;
+    width: 100vw;
+    margin-left: -10px;
+    margin-right: -10px;
+}
+
+.hot_drinks_list {
+    display: flex;
+    justify-content: space-around;
+    font-size: 4em;
+}
+
+.sweandtre_list {
+    display: flex;
+    justify-content: space-around;
+    font-size: 3em;
+}
+.sweandtre_list ul {
+    margin-top: -80px;
+    padding-left: -20px;
+}
 
