--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/common.css">
-    <link rel="stylesheet" href="styles/contact.css">
-    <link rel="stylesheet" href="styles/footer.css">
-    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="/static/styles/common.css">
+    <link rel="stylesheet" href="/static/styles/contact.css">
+    <link rel="stylesheet" href="/static/styles/footer.css">
+    <link rel="stylesheet" href="/static/styles/nav.css">
 
     <title>Contact</title>
 </head>
@@ -35,7 +35,7 @@
     
                 <div class="logo-header">
                     <div class="logo">
-                        <a href="index.html"><img src="images/Soda City 48x96 Sign PROOF I -  2014 (1).png" alt="MainLogo"></a>
+                        <a href="index.html"><img src="/static/images/Soda City 48x96 Sign PROOF I -  2014 (1).png" alt="MainLogo"></a>
                     </div>
                 </div>
     
