--- a/templates/menu.html
+++ b/templates/menu.html
@@ -5,100 +5,103 @@
     <title>Menu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/styles/index.css">
     <link rel="stylesheet" href="/static/styles/nav.css">
     <link rel="stylesheet" href="/static/styles/footer.css">
     <link rel="stylesheet" href="/static/styles/menu.css">
+
     
 </head>
 <body>
-    <div class="header-wrapper">
-        <div class="top-bar-wrapper">
-            <div class="phone-number-wrapper">
-                <div class="icon">
-                    <i class="fas fa-phone-volume"></i>
+        <div class="header-wrapper">
+                <div class="top-bar-wrapper">
+                    <div class="phone-number-wrapper">
+                        <div class="icon">
+                            <i class="fas fa-phone-volume"></i>
+                        </div>
+        
+                        <div class="phone-number">
+                            <p>(555) 555-5555</p>
+                            <div class="hours">
+                                <p>8AM - 11PM</p>
+                            </div>
+                        </div>
+                    </div>
+        
+                    <div class="logo-header">
+                        <div class="logo">
+                            <a href="index.html">
+                                <img src="/static/images/Soda City 48x96 Sign PROOF I -  2014 (1).png" alt="MainLogo"></a>
+                            </a>
+                        </div>
+                    </div>
+        
+                    <div class="location">
+                        <p>258 N Main St<br>
+                            Gunnison, Utah 84634</p>
+        
+                        <div class="icon">
+                                <a href= "https://www.google.com/maps/place/258+N+Main+St,+Gunnison,+UT+84634/@39.1591076,-111.8199568,17z/data=!3m1!4b1!4m5!3m4!1s0x874b805c534985af:0xef569876542cc509!8m2!3d39.1591076!4d-111.8177681"><i class="fas fa-map-marker-alt"></i></a>
+                        </div>
+                    </div>
                 </div>
-
-                <div class="phone-number">
-                    <p>(555) 555-5555</p>
-                    <div class="hours">
-                        <p>8AM - 11PM</p>
+        
+                <div class="nav-links-wrapper">
+                    <div class="link">
+                        <a href="index.html">Home</a>
+                    </div>
+        
+                    <div class="link">
+                        <a href="contact.html">Contact</a>
+                    </div>
+        
+                    <div class="link">
+                        <a href="Menu.html">Menu</a>
+                    </div>
+        
+                    <div class="link">
+                        <a href="index.html#about">About</a>
                     </div>
                 </div>
             </div>
-
-            <div class="logo-header">
-                <div class="logo">
-                    <a href="index.html">
-                        <img src="/static/images/Soda City 48x96 Sign PROOF I -  2014 (1).png" alt="MainLogo"></a>
-                    </a>
-                </div>
-            </div>
-
-            <div class="location">
-                <p>258 N Main St<br>
-                    Gunnison, Utah 84634</p>
-
-                <div class="icon">
-                        <a href= "https://www.google.com/maps/place/258+N+Main+St,+Gunnison,+UT+84634/@39.1591076,-111.8199568,17z/data=!3m1!4b1!4m5!3m4!1s0x874b805c534985af:0xef569876542cc509!8m2!3d39.1591076!4d-111.8177681"><i class="fas fa-map-marker-alt"></i></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="nav-links-wrapper">
-            <div class="link">
-                <a href="index.html">Home</a>
-            </div>
-
-            <div class="link">
-                <a href="contact.html">Contact</a>
-            </div>
-
-            <div class="link">
-                <a href="Menu.html">Menu</a>
-            </div>
-
-            <div class="link">
-                <a href="#about">About</a>
-            </div>
-        </div>
-    </div>
-
-
         <div class="menu_wrapper">
             <div class="menu_row">
                 <h1>Menu</h1>
             </div>
+        </div> 
+        <div class="prices">
+                <h1> PRICES STARTING AT:</h1>
+                <ul>
+                    <li>44oz................................................................$3.99</li>
+                    <li>32oz................................................................$2.99</li>
+                    <li>24oz..................................................................$1.99</li>
+                    <li>16oz.................................................................$0.99</li>
+                </ul>
         </div>
-
+        
         <div class="menu_cups">
-
+           
             <div class="cup_body">
                 <img src = "/static/images/cup.png" height = "250" width = "100" alt="cup1">
                 <h1> 44oz </h1>
             </div>
-
             <div class="cup_body">
                 <img src = "/static/images/cup.png" height = "225" width = "100" alt="cup2">
                 <h1> 32oz </h1>
             </div>
-
             <div class="cup_body">
                 <img src = "/static/images/cup.png" height = "200" width = "100" alt="cup3">
                 <h1> 24oz </h1>
             </div>
-
             <div class = "cup_body">
                 <img src = "/static/images/cup.png" height = "175" width = "100" alt="cup4">
                 <h1> 16oz </h1>
             </div>
-        </div>
-
-            <div class="items_wrapper">
+            <!-- <div class="items_wrapper">
                     <div class="item_prices">
                             <h1> $2.00 </h1>
                     </div>
@@ -114,138 +117,129 @@
                     <div class = "item_prices">
                         <h1> $1.25 </h1>
                     </div>
+                </div> -->
+        </div>
+           
+        
+        <div class="favorite_content">
+            <div class = "favorite_items">
+                <h1>Favorites</h1>
+            </div>
+        
+            <div class="favorite_list_1">
+                
+                <div class="list_items">
+                    <img src = "/static/images/drpepper.png" alt="">
+                    <p>Dirty Dr.Pepper <br> Dr.pepper + Coconut</p><br>
+                </div>
+                <div class="list_items">
+                    <img src="/static/images/drpepper.png" alt="">
+                    <p> Mighty Monarch <br> Dr.Pepper + Vanilla</p><br>
+                </div>
+                <div class="list_items">
+                    <img src="/static/images/sprite.png" alt="">
+                    <p>Big Easy <br> Sprite + Strawberry + Lime</p><br>
+                </div>
+                        
+                <div class="list_items">
+                    <img src="/static/images/sprite.png" alt="">
+                    <p>Lime Rickey <br> Sprite + Fresh Lime + Grape</p><br>
+                </div>
+                        
+                <div class="list_items">
+                    <img src="/static/images/sprite.png" alt="">
+                    <p>Shirley Temple <br> Sprite + Cherry + Maraschino Cherry</p><br>
+                </div>
+                <div class="list_items">
+                    <img src="/static/images/sprite.png" alt="">
+                    <p>Code Blue <br> Sprite + Blue Coconut</p><br>
+                </div>
+                <div class="list_items">
+                    <img src="/static/images/mtndew.png" alt="">
+                    <p>Kickin Rickey <br> Mtn.Dew + Grape + Fresh Lime</p><br>
+                </div>
+                <div class="list_items">
+                    <img src="/static/images/mtndew.png" alt="">
+                    <p>Sky Scrapper <br> Mtn.Dew + Blue Coconut + Strawberry</p><br>
                 </div>
         
-
+                <div class="list_items">
+                    <img src="/static/images/dietcoke.png" alt="">
+                    <p>Motor City <br> Diet Coke + Marachino Cherry</p><br>
+                </div>
         
-       
-    <div class="favorite_content">
-        <div class = "favorite_items">
-            <h1>Favorites</h1>
-        </div>
+                <div class="list_items">
+                    <img src="/static/images/coke.png" alt="">
+                    <p>Ghetto Buster <br> Coke + White Chocolate</p><br>
+                </div>
         
-        <div class="favorite_list_1">
-    
-            <div class="list_items">
-                <img src = "/static/images/drpepper.png" alt="">
-                <p>Dirty Dr.Pepper <br> Dr.pepper + Coconut</p><br>
-            </div>
-
-            <div class="list_items">
-                <img src="/static/images/drpepper.png" alt="">
-                <p> Mighty Monarch <br> Dr.Pepper + Vanilla</p><br>
-            </div>
-
-            <div class="list_items">
-                <img src="/static/images/sprite.png" alt="">
-                <p>Big Easy <br> Sprite + Strawberry + Lime</p><br>
-            </div>
-            
-            <div class="list_items">
-                <img src="/static/images/sprite.png" alt="">
-                <p>Lime Rickey <br> Sprite + Fresh Lime + Grape</p><br>
-            </div>
-            
-            <div class="list_items">
-                <img src="/static/images/sprite.png" alt="">
-                <p>Shirley Temple <br> Sprite + Cherry + Maraschino Cherry</p><br>
-            </div>
-
-            <div class="list_items">
-                <img src="/static/images/sprite.png" alt="">
-                <p>Code Blue <br> Sprite + Blue Coconut</p><br>
-            </div>
-
-            <div class="list_items">
-                <img src="/static/images/mtndew.png" alt="">
-                <p>Kickin Rickey <br> Mtn.Dew + Grape + Fresh Lime</p><br>
-            </div>
-
-            <div class="list_items">
-                <img src="/static/images/mtndew.png" alt="">
-                <p>Sky Scrapper <br> Mtn.Dew + Blue Coconut + Strawberry</p><br>
-            </div>
-
-            <div class="list_items">
-                <img src="/static/images/dietcoke.png" alt="">
-                <p>Motor City <br> Diet Coke + Marachino Cherry</p><br>
-            </div>
-
-            <div class="list_items">
-                <img src="/static/images/coke.png" alt="">
-                <p>Ghetto Buster <br> Coke + White Chocolate</p><br>
-            </div>
-
-            <div class="list_items">
-                <img src="/static/images/coke.png" alt="">
-                <p>Sin City <br> Coke + Vanilla + Maracshino cherry</p><br>
-            </div>
-
-            <div class="list_items">
-                <img src="/static/images/rootbeer.png" alt="">
-                <p>Brown Cow <br> Rootbeer + Vanilla Creamer</p><br>
-            </div>
+                <div class="list_items">
+                    <img src="/static/images/coke.png" alt="">
+                    <p>Sin City <br> Coke + Vanilla + Maracshino cherry</p><br>
+                </div>
+        
+                <div class="list_items">
+                    <img src="/static/images/rootbeer.png" alt="">
+                    <p>Brown Cow <br> Rootbeer + Vanilla Creamer</p><br>
+                </div>
+                                
             <div class="list_items">
                 <img src="/static/images/mtndew.png" alt="">
                 <p>Downtown <br> Mtn.Dew + Mango</p><br>
             </div>
-
             <div class="list_items">
                 <img src="/static/images/mtndew.png" alt="">
                 <p>Bulldog Blast <br> Mtn.Dew + Blue Rasberry</p><br>
             </div>
-
             <div class="list_items">
                 <img src="/static/images/mtndew.png" alt="">
                 <p>Maui Waui <br> Mtn.Dew + Coconut + Peach/Pineapple</p><br>
             </div>
-
+            
             <div class="list_items">
-                        <img src="/static/images/lemonade.png" alt="">
-                        <p>Cruisin  <br> Lemonade + Ras or Strawberry</p><br>
-                    </div>
-        
-                                
-                    
+                <img src="/static/images/lemonade.png" alt="">
+                <p>Cruisin  <br> Lemonade + Ras or Strawberry</p><br>
+            </div>
         </div>
     </div>
-
+    
                 
         <div class="smoothies_content">
             <div class="smoothies_items">
                 <h1>Smoothies</h1>
             </div>
             <div class="smoothies_list">
-               <img src = "/static/images/smoothies.jpg">
+               <!-- <img src = "images/smoothies.jpg"> -->
                     <ul>
-                        <h1>16 OZ only</h1>
-                        <h1>$5.00</h1>
                            <li>Strawberry</li>
                            <li>Bananas</li>
                            <li>Berry</li>
                            <li>Mango</li>
-                           <h1>Mix any two Flavors</h1> 
+                           <h1>MIX ANY TWO FLAVORS</h1> 
+                           <h1>16 Oz(Only)...........................................................$5.00</h1>
                    </ul> 
             </div>
         </div>
                         
-
         <div class="sweandtre">             
             <div class="sweandtre_wrapper">
                 <h1>Sweets & Treats</h1>
             </div>
             <div class="sweandtre_list">
-                <img src = "/static/images/treats.jpg">
+                <!-- <img src = "images/treats.jpg"> -->
                     <ul>
                         <h1>Treats:</h1>
-                            <li>Pretzels-----$1.50</li>
-                            <li>    W/cheese-----$1.75</li>
-                            <li>Nachos-----$1.75</li>
-                            <li>    W/Jalapenos-----$2.00</li>
+                            <li>Pretzels....................................................................$1.50</li>
+                            <li>W/cheese................................................................$1.75</li>
+                            <li>Nachos....................................................................$1.75</li>
+                            <li>W/Jalapenos...........................................................$2.00</li>
+                            <br>
+                            <br>
+                            <br>
                             <h1>Sweets:</h1>
-                            <li>Sugar Cookie-----$1.25 or 2 for $2.00</li>
-                            <li>Churro (Cinnamon & sugar-----$1.25</li>
-                            <li>Churro (Cream Filled-----$1.50</li>
+                            <li>Churro (Cinnamon & sugar)...................................$1.25</li>
+                            <li>Churro (Cream Filled).............................................$1.50</li>
+                            <li>Sugar Cookie....................................................$1.25 or 2 for $2.00</li>
                     </ul>
             </div>
         </div>
@@ -254,29 +248,26 @@
             <div class="hot_drinks_wrapper">
                     <h1>Hot Drinks</h1>
             </div>
-
             <div class = "hot_drinks_list">
-                <img src = "/static/images/coffee.jpeg">
                 <ul>
-                    <li>Hot Coffee</li>
-                    
-                    <li>Hot Chocolate</li>
+                    <li>Hot Coffee................................................................$1.00</li>
+                    <li>Hot Chocolate..........................................................$1.00</li>
                 </ul>
             </div>
         </div>
                                 
                     
-<div class="footer-wrapper">
-    <div class="footer-content">
-        <div class="footer-nav-links-wrapper">
-            <div class="link">
-                <a href="index.html">Home</a>
-            </div>
-
+        <div class="footer-wrapper">
+            <div class="footer-content">
+                <div class="footer-nav-links-wrapper">
+                    <div class="link">
+                        <a href="index.html">Home</a>
+                    </div>
+        
             <div class="link">
                 <a href="contact.html">Contact</a>
             </div>
-
+        
             <div class="icons">
                 <div class="icon">
                     <a href="https://www.instagram.com/mysodacity/"><i class="fab fa-instagram"></i></a>
@@ -284,24 +275,26 @@
                 <div class="icon">
                     <a href="https://www.facebook.com/sodacitygunnisonut/"><i class="fab fa-facebook-f"></i></a>
                 </div>
+        
                 <div class="icon">
                     <a href="contact.html"><i class="far fa-envelope"></i></a>
                 </div>
-            </div>
-
-            <div class="link">
-                <a href="Menu.html">Menu</a>
-            </div>
-
-            <div class="link">
-                <a href="#about">About</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="copyright-info">
-        <p>&copy; Drey's stuff 2019 &#124; All rights reserved</p>
-    </div>
-</div>         
+                        </div>
+                            
+                        <div class="link">
+                            <a href="Menu.html">Menu</a>
+                        </div>
+        
+                        <div class="link">
+                            <a href="index.html#about">About</a>
+                        </div>
+                    </div>
+                        </div>
+                            
+                    <div class="copyright-info">
+                        <p>&copy; Drey's stuff 2019 &#124; All rights reserved</p>
+                    </div>
+                </div>
+                  
 </body>
 </html>
